Adiciona campos Nome e CPF na compra da passagem

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -12,6 +12,7 @@
 </h:head>
 
 <h:body>
+    <f:view transient="true">
     <div class="login-container">
         <div class="login-box">
             <div class="login-logo">
@@ -58,5 +59,6 @@
             </h:form>
         </div>
     </div>
+    </f:view>
 </h:body>
 </html>
